SDI-430 Add @SlowReportQuery annotation to prison-api